src/objects/Person_Routing__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Manager__c</fullName>
        <formula>Account_Owner__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cadence_Name__c</fullName>
        <label>Cadence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Person Routings</relationshipLabel>
        <relationshipName>Person_Routings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Belise</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Person_Routings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Lower number is a higher priority.</inlineHelpText>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>WI</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>NB</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>NU</fullName>
                </value>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>QC</fullName>
                </value>
                <value>
                    <fullName>SK</fullName>
                </value>
                <value>
                    <fullName>YT</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Person Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Owner__c</columns>
        <columns>Account_Owner_Manager__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Person_Owner__c</columns>
        <columns>Language__c</columns>
        <columns>Campaign__c</columns>
        <columns>Cadence_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Routing</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Cadence_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Person_Routing__c.Campaign_Routing</value>
        </filters>
        <label>Campaign Routing</label>
    </listViews>
    <listViews>
        <fullName>Owner_Based</fullName>
        <columns>NAME</columns>
        <columns>Account_Owner__c</columns>
        <columns>Account_Owner_Manager__c</columns>
        <columns>Person_Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Person_Routing__c.Owner_Based</value>
        </filters>
        <label>Owner Based</label>
    </listViews>
    <listViews>
        <fullName>Territory_Based</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Person_Owner__c</columns>
        <columns>Language__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Person_Routing__c.Territory_Based</value>
        </filters>
        <label>Territory Based</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Person Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Routings</pluralLabel>
    <recordTypes>
        <fullName>Campaign_Routing</fullName>
        <active>true</active>
        <label>Campaign Routing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Owner_Based</fullName>
        <active>true</active>
        <label>Owner Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>Territory_Based</fullName>
        <active>true</active>
        <label>Territory Based</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>